<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single"
        >

        <item
            android:id="@+id/dashboard_id"
            android:title="@string/agent_dashboard"
            >
        </item>


        <item
            android:id="@+id/agent_sale"
            android:title="@string/agent_sale"
            >
        </item>

        <item
            android:id="@+id/sale_report_id"
            android:title="@string/sale_report"
            >
        </item>

        <item
            android:id="@+id/amountwise_report_id"
            android:title="@string/amountwise_report"
            >
        </item>

        <item
            android:id="@+id/winners_report_id"
            android:title="@string/winners_report"
            >
        </item>

        <item
            android:id="@+id/result_report_id"
            android:title="@string/result_report"
            >
        </item>

        <item
            android:id="@+id/trail_balance_id"
            android:title="@string/trail_balance"
            >
        </item>

        <item
            android:id="@+id/logout_id"
            android:title="@string/logout"
            >
        </item>

    </group>

</menu>